--- a/BookStoreAPI/BookStoreAPI.csproj
+++ b/BookStoreAPI/BookStoreAPI.csproj
@@ -14,6 +14,7 @@
     <RootNamespace>BookStoreAPI</RootNamespace>
     <AssemblyName>BookStoreAPI</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <DeployManagedRuntimeVersion>v4.0</DeployManagedRuntimeVersion>
     <UseIISExpress>true</UseIISExpress>
     <IISExpressSSLPort>443</IISExpressSSLPort>
     <IISExpressAnonymousAuthentication>enabled</IISExpressAnonymousAuthentication>
