--- a/BookStoreAPI/BookStoreAPI.csproj
+++ b/BookStoreAPI/BookStoreAPI.csproj
@@ -15,7 +15,7 @@
     <AssemblyName>BookStoreAPI</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <DeployManagedRuntimeVersion>v4.0</DeployManagedRuntimeVersion>
-    <DeployIisAppPath>book-api.dokuku.net</DeployIisAppPath>
+    <DeployIisAppPath>bookstore</DeployIisAppPath>
     <UseIISExpress>true</UseIISExpress>
     <IISExpressSSLPort>443</IISExpressSSLPort>
     <IISExpressAnonymousAuthentication>enabled</IISExpressAnonymousAuthentication>
@@ -218,7 +218,7 @@
       </FlavorProperties>
     </VisualStudio>
   </ProjectExtensions>
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
+  <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
   </Target>
